--- a/ARKFUTURE/CONFIG/anope/memoserv.conf
+++ b/ARKFUTURE/CONFIG/anope/memoserv.conf
@@ -1,149 +1,234 @@
 /*
- * MemoServ的示例配置文件.
+ * MemoServ 的示例配置文件.
  */
+
 
 service 
 {
 	/*
-	 * MemoServ客户端名称. 更改此值后可能需要同步修改memoserv模块的client指令.
+	 * MemoServ 客户端的名称.
+	 * 如果修改此值,可能也需要修改 memoserv 模块配置中的 client 指令.
 	 */
 	nick = "MemoServ"
  
 	/*
-	 * MemoServ客户端的用户名.
+	 * MemoServ 客户端的用户名.
 	 */
 	user = "services"
  
 	/*
-	 * MemoServ客户端的主机名.
+	 * MemoServ 客户端的主机名.
 	 */
 	host = "services.host" 
  
 	/*
-	 * MemoServ客户端的真实名称.
+	 * MemoServ 客户端的真实姓名.
 	 */
 	gecos = "Memo Service"
  
 	/*
-	 * 客户端模式设置. 除非明确知晓后果否则不要修改. 注释时根据协议模块使用安全默认值. 错误配置可能导致功能异常.
+	 * 此客户端应使用的模式.
+	 * 除非您清楚自己在做什么,否则请勿修改此项.
+	 *
+	 * 这些模式高度依赖 IRCd 类型.如果保持注释状态,将根据加载的协议模块使用合理的默认值.
+	 *
+	 * 注意: 错误设置此选项可能导致客户端部分或全部功能失效.若因此导致问题,我们将不提供支持.
 	 */
 	#modes = "+o"
  
 	/*
-	 * 服务应加入的频道列表(逗号分隔). 除日志频道外通常无用, 服务仅在频道内闲置不响应命令. 可使用模式字符或前缀符号指定频道前缀.
+	 * 此服务应加入的频道列表(逗号分隔,可选).
+	 * 除日志频道外,此功能用途有限,因为服务仅在指定频道中闲置,不会接受任何命令.
+	 *
+	 * 可通过模式字符或前缀符号为频道添加前缀.
 	 */
 	#channels = "@#services,#mychan"
 }
- 
+
+
 /*
- * MemoServ核心模块. 提供备忘录服务基础功能.
+ * MemoServ 核心模块.
+ *
+ * 提供 MemoServ 的基础功能.
  */
 module 
 {
 	name = "memoserv"
 	/*
-	 * 指定作为MemoServ的客户端名称(通过service块配置).
+	 * 应作为 MemoServ 的客户端名称.客户端通过 service 块配置.
 	 */
 	client = "MemoServ"
  
 	/*
-	 * 用户默认最大备忘录存储量. 普通用户可在0到此值间设置限制. 服务管理员可修改或禁用此限制. 未设置则无限制.
+	 * 用户默认允许保存的最大备忘录数量.普通用户可设置 0 到此值之间的限制.
+	 * Services 管理员可设置为任意值或禁用此限制.
+	 *
+	 * 此指令为可选但建议配置.若未设置,默认禁用限制,普通用户可自由设置任意值.
 	 */
 	maxmemos = 20 
  
 	/*
-	 * SEND命令使用间隔(防滥发攻击). 默认3秒限制可防止大量备忘录占用磁盘/内存.
+	 * 连续使用 MemoServ SEND 命令之间的延迟时间.可防止垃圾信息及通过大量发送备忘录占用磁盘/内存的拒绝服务攻击.
+	 * 默认 3 秒延迟意味着当前 IRC 协议下,用户每秒最多平均发送 150 字节的备忘录.
+	 *
+	 * 此指令为可选但建议配置.
 	 */
 	senddelay = 3s 
 }
+
+
+/*
+ * MemoServ 核心命令.
+ *
+ * 在 Anope 中,模块可提供多个命令,每个命令有唯一名称.加载这些模块后,
+ * 可将命令配置到任意客户端,并使用自定义名称.
+ *
+ * 可为命令指定权限名称,要求执行者必须具有该权限(通过 opertype 配置).
+ *
+ * 以下为默认配置,除非需要修改默认行为,否则无需编辑.
+ */
  
 /* 添加帮助命令 */
 command { service = "MemoServ"; name = "HELP"; command = "generic/help"; }
  
 /*
- * ms_cancel: 提供CANCEL命令. 用于撤回已发送但未读的备忘录.
+ * ms_cancel 
+ *
+ * 提供命令 memoserv/cancel.
+ *
+ * 用于取消已发送但尚未阅读的备忘录.
  */
 module { name = "ms_cancel" }
 command { service = "MemoServ"; name = "CANCEL"; command = "memoserv/cancel"; }
  
 /*
- * ms_check: 提供CHECK命令. 用于检查已发送备忘录是否被读取.
+ * ms_check 
+ *
+ * 提供命令 memoserv/check.
+ *
+ * 用于检查已发送的备忘录是否被阅读.
  */
 module { name = "ms_check" }
 command { service = "MemoServ"; name = "CHECK"; command = "memoserv/check"; }
  
 /*
- * ms_del: 提供DEL命令. 用于删除用户备忘录.
+ * ms_del 
+ *
+ * 提供命令 memoserv/del.
+ *
+ * 用于删除您的备忘录.
  */
 module { name = "ms_del" }
 command { service = "MemoServ"; name = "DEL"; command = "memoserv/del"; }
  
 /*
- * ms_ignore: 提供IGNORE命令. 用于屏蔽特定用户的备忘录.
+ * ms_ignore 
+ *
+ * 提供命令 memoserv/ignore.
+ *
+ * 用于忽略特定用户的备忘录.
  */
 module 
 {
 	name = "ms_ignore"
  
 	/*
-	 * 备忘录屏蔽列表最大条目数(可选配置).
+	 * 备忘录忽略列表允许的最大条目数.
+	 *
+	 * 此指令为可选.
 	 */
 	max = 32 
 }
 command { service = "MemoServ"; name = "IGNORE"; command = "memoserv/ignore"; }
  
 /*
- * ms_info: 提供INFO命令. 显示账号/频道的备忘录相关信息.
+ * ms_info 
+ *
+ * 提供命令 memoserv/info.
+ *
+ * 用于显示账户或频道的备忘录相关信息.
  */
 module { name = "ms_info" }
 command { service = "MemoServ"; name = "INFO"; command = "memoserv/info"; }
  
 /*
- * ms_list: 提供LIST命令. 列出用户当前备忘录.
+ * ms_list 
+ *
+ * 提供命令 memoserv/list.
+ *
+ * 用于列出您当前的备忘录.
  */
 module { name = "ms_list" }
 command { service = "MemoServ"; name = "LIST"; command = "memoserv/list"; }
  
 /*
- * ms_read: 提供READ命令. 用于读取备忘录.
+ * ms_read 
+ *
+ * 提供命令 memoserv/read.
+ *
+ * 用于阅读您的备忘录.
  */
 module { name = "ms_read" }
 command { service = "MemoServ"; name = "READ"; command = "memoserv/read"; }
  
 /*
- * ms_rsend: 提供RSEND命令. 发送需阅读回执的备忘录(需配置回执功能).
+ * ms_rsend 
+ *
+ * 提供命令 memoserv/rsend.
+ *
+ * 用于发送需要阅读回执的备忘录.
+ *
+ * 需配置 memoserv:memoreceipt.
  */
 #module 
 {
 	name = "ms_rsend"
  
 	/*
-	 * 是否仅限服务管理员使用RSEND(可选配置).
+	 * 仅允许 Services 操作员使用 ms_rsend.
+	 *
+	 * 此指令为可选.
 	 */
 	operonly = false 
 }
 #command { service = "MemoServ"; name = "RSEND"; command = "memoserv/rsend"; }
  
 /*
- * ms_send: 提供SEND命令. 用于发送备忘录.
+ * ms_send 
+ *
+ * 提供命令 memoserv/send.
+ *
+ * 用于发送备忘录.
  */
 module { name = "ms_send" }
 command { service = "MemoServ"; name = "SEND"; command = "memoserv/send"; }
  
 /*
- * ms_sendall: 提供SENDALL命令. 群发备忘录给所有注册用户(需权限).
+ * ms_sendall 
+ *
+ * 提供命令 memoserv/sendall.
+ *
+ * 用于向所有注册用户发送群发备忘录.
  */
 module { name = "ms_sendall" }
 command { service = "MemoServ"; name = "SENDALL"; command = "memoserv/sendall"; permission = "memoserv/sendall"; }
  
 /*
- * ms_set: 提供SET命令. 配置新备忘录通知方式/存储限制等设置.
+ * ms_set 
+ *
+ * 提供命令 memoserv/set.
+ *
+ * 用于设置新备忘录通知方式、备忘录限制等参数.
  */
 module { name = "ms_set" }
 command { service = "MemoServ"; name = "SET"; command = "memoserv/set"; }
  
 /*
- * ms_staff: 提供STAFF命令. 发送备忘录给全体工作人员(需权限).
+ * ms_staff 
+ *
+ * 提供命令 memoserv/staff.
+ *
+ * 用于向所有注册的团队成员发送备忘录.
  */
 module { name = "ms_staff" }
 command { service = "MemoServ"; name = "STAFF"; command = "memoserv/staff"; permission = "memoserv/staff"; }
