--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -222,7 +222,7 @@ oper
 	name = "arkfuture"
 	type = "Services Root"
 	require_oper = yes 
-	password = "passwd"
+	password = ""
 	#certfp = ""
 	#host = "*"
 	#vhost = "" 
@@ -346,38 +346,51 @@ include
 	type = "file"
 	name = "modules.conf"
 }
-
-# 管理员服务
-include
-{
-	type = "file"
-	name = "operserv.conf"
-}
-
-# 备忘录服务
-include
-{
-	type = "file"
-	name = "memoserv.conf"
-}
-
-# 公共服务
+# 公共服务配置文件
 include
 {
 	type = "file"
 	name = "global.conf"
 }
-
-# bot服务
+# 用户服务配置文件
+include
+{
+	type = "file"
+	name = "nickserv.conff"
+}
+# 频道服务配置文件
+include
+{
+	type = "file"
+	name = "chanserv.conf"
+}
+# bot服务配置文件
 include
 {
 	type = "file"
 	name = "botserv.conf"
 }
-
-# 频道服务
+# 备忘录服务配置文件
 include
 {
 	type = "file"
-	name = "chanserv.conf"
+	name = "memoserv.conf"
+}
+# 管理员服务配置文件夹
+include
+{
+	type = "file"
+	name = "operserv.conf"
+}
+# 主机服务配置文件
+include
+{
+	type = "file"
+	name = "hostserv.conf"
+}
+# 模块配置文件
+include
+{
+	type = "file"
+	name = "modules.conf"
 }
