--- a/ARKFUTURE/CONFIG/anope/nickserv.conf
+++ b/ARKFUTURE/CONFIG/anope/nickserv.conf
@@ -136,7 +136,7 @@ module
 	 *
 	 * 此指令可选.
 	 */
-	modesonid = "+R"
+	#modesonid = "+R"
  
 	/*
 	 * 若启用, NickServ INFO 命令的 "last quit message" 字段将不显示网络分裂信息.
