--- a/ARKFUTURE/CONFIG/anope/nickserv.conf
+++ b/ARKFUTURE/CONFIG/anope/nickserv.conf
@@ -77,7 +77,7 @@ module
 	 *
 	 * 此指令为可选.
 	 */
-	unregistered_notice = "Your nickname is not registered(您未注册). To register it, use: /msg NickServ REGISTER password email(若注册使用命令: /msg NickServ REGISTER 密码 邮箱)"
+	unregistered_notice = "Your nickname is not registered(您未注册). To register it, use: /msg NickServ REGISTER password email(若注册请使用命令: /msg NickServ REGISTER 您的密码 您的邮箱)"
  
 	/*
 	 * 新注册昵称的默认选项. 注意: 修改这些选项不影响已注册昵称. 列表必须以空格分隔.
