--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -222,7 +222,7 @@ oper
 	name = "arkfuture"
 	type = "Services Root"
 	require_oper = yes 
-	password = ""
+	#password = ""
 	#certfp = ""
 	#host = "*"
 	#vhost = "" 
