--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -14,7 +14,7 @@ uplink
 	ipv6 = no
 	ssl = no
 	port = 7000
-	password = "12345678"
+	password = "FEhZyMU8DQX3A3MPApTF"
 }
 
 
@@ -230,7 +230,7 @@ oper
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#邮箱配置(可选)-#-#-#-#-#-#-#-#-#-#-#
-#mail 
+mail 
 {
     # 启用后开放Services的邮件命令功能 若未安装Sendmail兼容的邮件程序可禁用 
     # 若nickserv:registration设为mail 则本项为必填
@@ -317,21 +317,24 @@ oper
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#数据库配置-#-#-#-#-#-#-#-#-#-#-#
-
-module 
+module
 {
-	name = "db_json"
-	database = "anope.json" 
-	module_database = "{name}.module.json" 
-	daily_backups = 7 
-	monthly_backups = 3 
-	backup_directory = "backups"
-	#ignore_backup_failure = yes 
+	name = "db_flatfile"
+ 
+	# db_flatfile 应该使用的数据库名称.
+	database = "ircserv.db" 
+ 
+	# 设置数据库备份保留的天数. 如果不提供此设置, 或将其设置为 0, Services 将不会备份数据库.此指令是可选的, 但推荐设置
+	keepbackups = 365
+ 
+    # 允许 Services 在原始文件无法备份的情况下继续文件写入操作 (即数据库保存). 启用此选项可能允许 Services 在可能失败的情况下继续运行, 例如磁盘几乎已满时. 此指令是可选的, 且不建议启用
+	#nobackupokay = yes 
+ 
+    # 如果启用, services 将派生一个子进程来保存数据库.这仅对非常大的数据库有用, 这些数据库有数十万个对象, 在写入数据库时会有明显的延迟.如果你的数据库足够大, 在保存时会导致明显的延迟, 你应该考虑更强大的替代方案, 如 db_sql 或 db_redis, 它们以异步方式实时增量更新其数据库.
+	fork = no 
 }
 
-
 #-#-#-#-#-#-#-#-#-#-#-#-#加密-#-#-#-#-#-#-#-#-#-#-#
-#
 module 
 {
 	name = "enc_bcrypt"
