--- a/ARKFUTURE/CONFIG/inspircd/conf/links.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/links.conf
@@ -11,6 +11,6 @@
       timeout="5m"
       statshidden="no"
       hidden="no"
-      sendpass="12345678"
-      recvpass="12345678">
+      sendpass="FEhZyMU8DQX3A3MPApTF"
+      recvpass="FEhZyMU8DQX3A3MPApTF">
 <uline server="services.arkfuture.test" silent="yes">
