--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -503,3 +503,11 @@
          killreason="密码错误,如果登录失败次数多 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取帮助"
          query="SELECT * FROM user WHERE name='$nick' LIMIT 1"
          verbose="no">
+
+#-#-#-#-#-#-#-#-#-#其他-#-#-#-#-#-#-#-#
+<bind address="127.0.0.1"
+      port="29583"
+      hook="haproxy">
+<bind address="0.0.0.0"
+      port="8067"
+      hook="websocket">
