--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -490,6 +490,22 @@
             keyfile="&dir.config;/key.pem" 
             priority="NORMAL">
 
+# SSL<bind><connect>
+#<bind port="6697,6698"
+#      sslprofile="Clients"
+#      type="clients">
+#<connect name="Secure"
+#         parent="Main"
+#         allow="*"
+#         port="6697"
+#         modes="+iw"
+#         motd="motd"
+#         requiressl="yes">
+#<bind port="8067"
+#      sslprofile="Websocket"
+#      hook="websocket">
+
+
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
 <database module="sqlite"
@@ -505,9 +521,6 @@
          verbose="no">
 
 #-#-#-#-#-#-#-#-#-#其他-#-#-#-#-#-#-#-#
-<bind address="127.0.0.1"
-      port="29583"
-      hook="haproxy">
-<bind address="0.0.0.0"
-      port="8067"
-      hook="websocket">
+#<bind address="127.0.0.1"
+#      port="29583"
+#      hook="haproxy">
