--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -490,7 +490,7 @@
             keyfile="&dir.config;/key.pem" 
             priority="NORMAL">
 
-# SSL<bind><connect>
+# SSL/TLS<bind><connect>
 #<bind port="6697,6698"
 #      sslprofile="Clients"
 #      type="clients">
