--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -521,6 +521,7 @@
          verbose="no">
 
 #-#-#-#-#-#-#-#-#-#其他-#-#-#-#-#-#-#-#
+# haproxy配置
 #<bind address="127.0.0.1"
-#      port="29583"
+#      port="29636"
 #      hook="haproxy">
