--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -68,9 +68,9 @@
 <connect name="Basic"
          parent="Main"
          allow="*"
+         port="6667,6668,6669"
          modes="+iw"
-         motd="motd"
-         port="6667,6668,6669">
+         motd="motd">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
