--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -476,19 +476,30 @@
 <sslprofile name="Clients"
             provider="gnutls"
             certfile="&dir.config;/cert.pem"
-            keyfile="&dir.config;/key.pem" 
-            priority="NORMAL">
+            hash="sha3-256"
+            keyfile="&dir.config;/key.pem"
+            outrecsize="2048"
+            priority="NORMAL"
+            requestclientcert="no"
+            strictpriority="no">
 <sslprofile name="Websocket"
             provider="gnutls"
             certfile="&dir.config;/cert.pem"
+            hash="sha3-256"
             keyfile="&dir.config;/key.pem"
+            outrecsize="2048"
             priority="NORMAL"
-            requestclientcert="no">
+            requestclientcert="no"
+            strictpriority="no">
 <sslprofile name="Servers"
             provider="gnutls"
             certfile="&dir.config;/cert.pem"
-            keyfile="&dir.config;/key.pem" 
-            priority="NORMAL">
+            hash="sha3-256"
+            keyfile="&dir.config;/key.pem"
+            outrecsize="2048"
+            priority="NORMAL"
+            requestclientcert="no"
+            strictpriority="no">
 
 # SSL/TLS<bind><connect>
 #<bind port="6697,6698"
