--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -480,7 +480,7 @@
             keyfile="&dir.config;/key.pem"
             outrecsize="2048"
             priority="NORMAL"
-            requestclientcert="no"
+            requestclientcert="yes"
             strictpriority="no">
 <sslprofile name="Websocket"
             provider="gnutls"
@@ -498,7 +498,7 @@
             keyfile="&dir.config;/key.pem"
             outrecsize="2048"
             priority="NORMAL"
-            requestclientcert="no"
+            requestclientcert="yes"
             strictpriority="no">
 
 # SSL/TLS<bind><connect>
