--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -452,7 +452,7 @@
 
 <watch maxwatch="30">
 
-<wsorigin allow="http://*.*">
+<wsorigin allow="*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
