--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -46,7 +46,7 @@
 # <connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标签可以根据需要定义多次.
 <connect name="Main"
          commandrate="1000"
-         fakelag="yes"
+         fakelag="no"
          globalmax="3"
          hardsendq="1M"
          limit=""
