--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -412,7 +412,7 @@
        zlineonmatch="no">
 
 <sasl requiressl="yes"
-      target="services.example.com">
+      target="services.arkfuture.test">
 
 <securelist exemptregistered="yes"
             showmsg="yes"
