--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -70,7 +70,8 @@
          allow="*"
          port="6667,6668,6669"
          modes="+iw"
-         motd="motd">
+         motd="motd"
+         usests="no">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
