--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -316,7 +316,7 @@
             maxbackoff="5m">
 
 <gateway type="webirc"
-         password="$2a$15$uJ6FPZACRJQr24lRxiWyDe0q/3r7fyMcAd/8/l5BOF5R.NKD9BDAG"
+         password="$2a$12$S28SCyowkPuj5s41e1b9zOR.0h7pkQEBdDB6EIeZXjW9fxt7a5rLS
          hash="bcrypt"
          mask="*">
 
