--- a/ARKFUTURE/CONFIG/i2p-tor/tunnels.conf
+++ b/ARKFUTURE/CONFIG/i2p-tor/tunnels.conf
@@ -31,4 +31,4 @@ type = irc
 host = 127.0.0.1
 port = 6667
 keys = afeirc-keysc.dat
-webircpassword = 6vHdPdzruw3EFX4
+webircpassword = $2a$12$S28SCyowkPuj5s41e1b9zOR.0h7pkQEBdDB6EIeZXjW9fxt7a5rLS
