--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -328,6 +328,9 @@
 <hidechans affectsopers="no"
            hideservices="yes">
 
+<ident prefixunqueried="no"
+       timeout="1s">
+
 <inviteexception bypasskey="yes">
 
 <ircv3 accountnotify="yes"
