--- a/ARKFUTURE/CONFIG/i2p-tor/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2p-tor/i2pd.conf
@@ -12,8 +12,11 @@ nat = true
 notransit = false
 floodfill = false
 
-log = true
+log = file
+logfile = /var/log/i2pd/i2pd.log
 loglevel = info
+logclftime = true
+
 
 ## 服务设置
 [ntcp2]
