--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -316,8 +316,7 @@
             maxbackoff="5m">
 
 <gateway type="webirc"
-         password="$2a$12$S28SCyowkPuj5s41e1b9zOR.0h7pkQEBdDB6EIeZXjW9fxt7a5rLS
-         hash="bcrypt"
+         password="Xb2umZUNBwYYfkpUxuRmtQXCdQA8AB3h"
          mask="*">
 
 <helpmode ignorehideoper="no"
