--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -499,20 +499,17 @@
             strictpriority="no">
 
 
-# SSL/TLS<bind><connect>
-#<bind port="6697,6698"
-#      sslprofile="Clients"
-#      type="clients">
-#<connect name="Secure"
-#         parent="Main"
-#         allow="*"
-#         port="6697"
-#         modes="+iw"
-#         motd="motd"
-#         requiressl="yes">
-#<bind port="8067"
-#      sslprofile="Websocket"
-#      hook="websocket">
+# SSL/TLS/haproxy<bind><connect>
+<bind port="6697"
+      sslprofile="Clients"
+      type="clients">
+<connect name="Secure"
+         parent="Main"
+         allow="*"
+         port="6697"
+         modes="+iw"
+         motd="motd"
+         requiressl="yes">
 
 
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
@@ -528,10 +525,3 @@
          killreason="密码错误,如果登录失败次数多 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取帮助"
          query="SELECT * FROM user WHERE name='$nick' LIMIT 1"
          verbose="no">
-
-
-#-#-#-#-#-#-#-#-#-#其他-#-#-#-#-#-#-#-#
-# haproxy配置
-#<bind address="127.0.0.1"
-#      port="29636"
-#      hook="haproxy">
