--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -508,8 +508,7 @@
          allow="*"
          port="6697"
          modes="+iw"
-         motd="motd"
-         requiressl="yes">
+         motd="motd">
 
 
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
