--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -500,15 +500,15 @@
 
 
 # SSL/TLS/haproxy<bind><connect>
-<bind port="6697"
-      sslprofile="Clients"
-      type="clients">
-<connect name="Secure"
-         parent="Main"
-         allow="*"
-         port="6697"
-         modes="+iw"
-         motd="motd">
+#<bind port="6697"
+#      sslprofile="Clients"
+#      type="clients">
+#<connect name="Secure"
+#         parent="Main"
+#         allow="*"
+#         port="6697"
+#         modes="+iw"
+#         motd="motd">
 
 
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
