--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -214,7 +214,7 @@
              savefrombots="yes"
              sendtobots="yes">
 
-<chanlog channel="#arkfuture_log"
+<chanlog channel="#arkfuture_ao"
          snomasks="cqjknorvwxCQJKNORVWX">
 
 <channames allowrange=""
