--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -216,9 +216,25 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
 # 模块配置文件
 <include file="&ConfPath;/modules.conf"
-         noenv="yes"
+         noenv="no"
          noexec="no"
          noinclude="no"
+         missingokay="no">
+
+# 管理员配置文件
+<include file="&ConfPath;/opers.conf"
+         noenv="no"
+         noexec="no"
+         noinclude="no"
+         mandatorytag="oper"
+         missingokay="no">
+
+# 服务器互联配置
+<include file="&ConfPath;/links.conf"
+         noenv="no"
+         noexec="no"
+         noinclude="no"
+         mandatorytag="link"
          missingokay="no">
 
 # codepage模块所导入的ascii格式
@@ -243,12 +259,4 @@
          noexec="yes"
          noinclude="no"
          mandatorytag="alias"
-         missingokay="no">
-
-# 管理员配置文件
-<include file="&ConfPath;/opers.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="oper"
          missingokay="no">
