--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -1,4 +1,4 @@
-# Anope conf ---UTF-8 ---Security configuration ---anope_v2.0
+# Anope conf ---UTF-8 ---Security configuration
 # 这只是一个基础的设置(模板)文件 我们展示了部分值展示给您 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 
