--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -45,30 +45,23 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标签可以根据需要定义多次.
 <connect name="Main"
-         commandrate="1000"
+         commandrate="5000"
          fakelag="yes"
          globalmax="3"
-         hardsendq="1M"
-         limit=""
+         hardsendq="5M"
          localmax="3"
-         maxchans=""
          maxconnwarn="no"
-         pingfreq="2m"
-         recvq="8K"
+         pingfreq="90s"
+         recvq="12K"
          resolvehostnames="yes"
-         softsendq="8192"
-         threshold="10"
-         timeout="10"
-         uniqueusername="yes"
-         password=""
-         hash="bcrypt"
-         usecloak="yes"
-         useconnectban="yes">
+         softsendq="16K"
+         threshold="50"
+         timeout="10s"
+         uniqueusername="yes">
 
 <connect name="Basic"
          parent="Main"
          allow="*"
-         port="6667,6668,6669"
          modes="+iw"
          motd="motd"
          usests="no">
