--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -66,10 +66,10 @@
 <module name="hidemode">
 <module name="hideoper">
 <module name="hostcycle">
-#<module name="httpd">
-#<module name="httpd_acl">
-#<module name="httpd_config">
-#<module name="httpd_stats">
+<module name="httpd">
+<module name="httpd_acl">
+<module name="httpd_config">
+<module name="httpd_stats">
 <module name="ident">
 <module name="inviteexception">
 <module name="ircv3">
